Fix Stripe Element dark mode styling

--- a/src/client/app/shared/stripe-elements/stripe-elements/stripe-elements.component.scss
+++ b/src/client/app/shared/stripe-elements/stripe-elements/stripe-elements.component.scss
@@ -4,7 +4,7 @@
 	align-items: flex-start;
 
 	.stripe-element {
-		background-color: #f5f5f5;
+		background-color: rgba(0, 0, 0, 0.04);
 		border-radius: 4px;
 		padding: 1.15em 1em 1.15em 1em;
 	}
