--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -212,5 +212,5 @@ body {
 
 // Stripe element override if dark theme
 .dark-theme .stripe-element {
-	border-color: rgba(255, 255, 255, 0.7) !important;
+	background-color: rgba(255, 255, 255, 0.1) !important;
 }
